src/objects/Custom_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Custom Fields</label>
</CustomObject>